> toetsvolgorde en linkwijziging dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -133,8 +133,8 @@
 <tr><td>Computer science basics</td><td>---</td><td>7,50</td><td>0</td><td>---</td></tr>
 <tr><td>Programming basics</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr>
 </tbody></table></section><h5>Blok 2 (12,50 EC)</h5><section class="scrollable_ec_table"><table class="ec_table"><thead><tr><th class="equal_width_fcol">Onderdeel</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
-<tr><td>Object-oriented programming</td><td>---</td><td>10,00</td><td>0</td><td>---</td></tr>
 <tr><td>Professional skills 1</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
+<tr><td>Object-oriented programming</td><td>---</td><td>10,00</td><td>0</td><td>---</td></tr>
 </tbody></table></section><h5>Blok 3 (15,00 EC)</h5><section class="scrollable_ec_table"><table class="ec_table"><thead><tr><th class="equal_width_fcol">Onderdeel</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
 <tr><td>Professional skills 2</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
 <tr><td>Professionele werkplek 1</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
@@ -142,8 +142,8 @@
 <tr><td>Framework project 1</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr>
 </tbody></table></section><h5>Blok 4 (12,50 EC)</h5><section class="scrollable_ec_table"><table class="ec_table"><thead><tr><th class="equal_width_fcol">Onderdeel</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
 <tr><td>Professional skills 3</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
-<tr><td>Framework project 2</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr>
 <tr><td>Framework development 2</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr>
+<tr><td>Framework project 2</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr>
 </tbody></table></section><h5>Overige (5,00 EC)</h5><section class="scrollable_ec_table"><table class="ec_table"><thead><tr><th class="equal_width_fcol">Onderdeel</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
 <tr><td>HZ-Personality 2a</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
 <tr><td>IT Personality 2a</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
@@ -153,7 +153,7 @@
                     <ul>
                         <li><a href="https://hz.nl/uploads/documents/Regelingen/NL/Onderwijs-examenregelingen/OER-HZ-2018-2019docv2018-06-26DEFCvB-V-01.pdf" title="Onderwijs- en examenregelingen">Onderwijs- en examenregelingen</a></li>
                         <li><a href="https://hz.nl/uploads/documents/Regelingen/NL/Onderwijs-examenregelingen/Studentenstatuut/Studentenstatuut-HZ-University-of-Applied-Sciences.pdf" title="Studentenstatuut">Studentenstatuut</a></li>
-                        <li><a href="https://learn.hz.nl" title="Digitale leeromgeving">Digitale leeromgeving</a></li>
+                        <li><a href="https://learn.hz.nl/course/view.php?id=1024#section-0" title="Digitale leeromgeving blok 1">Digitale leeromgeving blok 1</a></li>
                         <li><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus" title="Studiestatus">Studiestatus</a></li>
                         <li><a href="https://hz-hbo-ict.slack.com/" title="Opleidingsslack">Opleidingsslack</a></li>
                         <li><a href="https://learn.hz.nl/my/?myoverviewtab=timeline" title="Voortgang op MyHZ">Voortgang op MyHZ</a></li>
