> voldoet nu grotendeels aan de functionele eisen

--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,6 @@
                     <li>Algemeen</li>
                     <ul>
                         <li>Houd er totaal niet van om in de <i>spotlights</i> te staan.</li>
-                        <li>Presenteert daarom dus ook liever niet...</li>
                         <li>Stelt met regelmaat privacy boven 'je mag alles weten'.</li>
                     </ul>
                     <li>Interesses</li>
@@ -51,7 +50,8 @@
                             Is geïnteresseerd in geschiedenis, met name de Eerste en Tweede
                             Wereldoorlog.
                         </li>
-                        <li>Verder lijkt het mij logisch dat ik in ICT geïnteresseerd ben.</li>
+                        <li>Techniek.</li>
+                        <li>Zo nu en dan ook wat geologie.</li>
                     </ul>
                     <li>Overige</li>
                     <ul>
