--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <title>
     Home</title>
 
+<link rel="icon" type="image/png" href="/img/favicon.png"/>
+
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css"/>
@@ -25,7 +27,7 @@
                 <h1>Welkom!</h1>
                 <p>
                     Ah. Je hebt deze pagina kunnen vinden tussen alle URL's en/of
-                    zoekresultaten die het internet rijk is. <i>Good</i>.
+                    zoekresultaten die het internet rijk is. <i>Good</i>!
                 </p>
                 <p>
                     Voordat je verder gaat lezen, ik ben Jarno Overwijk. Lees wat
