--- a/motivation.html
+++ b/motivation.html
@@ -8,6 +8,8 @@
 <title>
     Motivatie</title>
 
+<link rel="icon" type="image/png" href="/img/favicon.png"/>
+
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css"/>
@@ -18,7 +20,6 @@
         <nav class="nav_js" id="responsive_nav"><a href='/index.html'>Home</a>
 <a href='/profile.html'>Over mij</a>
 <a href='/dashboard.html'>Dashboard</a>
-<a class="active" href='/motivation.html'>Motivatie</a>
 <a href='/experiment.html'>Experimenten</a>
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
