--- a/tasks/programming_basics/canvas.html
+++ b/tasks/programming_basics/canvas.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <canvas id="drawable_canvas" width="500px" height="500px"></canvas>
+        <button onclick="reset()">Reset</button>
         <button onclick="drawDiamond()">Teken diamant</button>
     </body>
 </html>
