--- a/tasks/programming_basics/canvas.html
+++ b/tasks/programming_basics/canvas.html
@@ -12,5 +12,6 @@
         <canvas id="drawable_canvas" width="500px" height="500px"></canvas>
         <button onclick="reset()">Reset</button>
         <button onclick="drawDiamond()">Teken diamant</button>
+        <button onclick="drawSquare()">Teken vierkant</button>
     </body>
 </html>
