--- a/tasks/programming_basics/canvas.html
+++ b/tasks/programming_basics/canvas.html
@@ -13,5 +13,6 @@
         <button onclick="reset()">Reset</button>
         <button onclick="drawDiamond()">Teken diamant</button>
         <button onclick="drawSquare()">Teken vierkant</button>
+        <button onclick="drawWhatever()">Teken willekeurige 'vorm'</button>
     </body>
 </html>
