--- a/html/experiment.html
+++ b/html/experiment.html
@@ -16,10 +16,11 @@
 <script src="/js/responsive.js"></script>        <link rel="stylesheet" type="text/css" media="screen" href="/css/experiments.css" />
     </head>
     <body>
-        <nav class="nav_js" id="responsive_nav"><a href='/index.html'>Home</a>
-<a href='/profile.html'>Over mij</a>
-<a href='/dashboard.html'>Dashboard</a>
-<a class="active" href='/experiment.html'>Experimenten</a>
+        <nav class="nav_js" id="responsive_nav"><a href='/html/index.html'>Home</a>
+<a href='/html/profile.html'>Over mij</a>
+<a href='/html/dashboard.html'>Dashboard</a>
+<a href='/html/motivation.html'>Motivatie</a>
+<a class="active" href='/html/experiment.html'>Experimenten</a>
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
             <section>
@@ -38,7 +39,7 @@
                 </div>
                 <h5>Onderwerp 2: Lay-out</h5>
                 <p>
-                    Zie <a href="/experiment2.html">deze pagina</a>. Hier is ook
+                    Zie <a href="/html/experiment2.html">deze pagina</a>. Hier is ook
                     een zijbalk aan toegevoegd.
                 </p>
                 <h5>Onderwerp 3: CSS transformations</h5>
