--- a/html/experiment2.html
+++ b/html/experiment2.html
@@ -6,8 +6,8 @@
         <title>Experiment II</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"/>
-        <link rel="stylesheet" type="text/css" media="screen" href="css/experiments2.css" />
-        <script src="js/main.js"></script>
+        <link rel="stylesheet" type="text/css" media="screen" href="/css/experiments2.css" />
+        <script src="/js/main.js"></script>
     </head>
     <body>
         <header>
