--- a/html/motivation.html
+++ b/html/motivation.html
@@ -8,8 +8,6 @@
 <title>
     Motivatie</title>
 
-<link rel="icon" type="image/png" href="/img/favicon.png"/>
-
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css"/>
@@ -17,10 +15,11 @@
 
 <script src="/js/responsive.js"></script>    </head>
     <body>
-        <nav class="nav_js" id="responsive_nav"><a href='/index.html'>Home</a>
-<a href='/profile.html'>Over mij</a>
-<a href='/dashboard.html'>Dashboard</a>
-<a href='/experiment.html'>Experimenten</a>
+        <nav class="nav_js" id="responsive_nav"><a href='/html/index.html'>Home</a>
+<a href='/html/profile.html'>Over mij</a>
+<a href='/html/dashboard.html'>Dashboard</a>
+<a class="active" href='/html/motivation.html'>Motivatie</a>
+<a href='/html/experiment.html'>Experimenten</a>
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
             <section>
