--- a/html/profile.html
+++ b/html/profile.html
@@ -15,10 +15,11 @@
 
 <script src="/js/responsive.js"></script>    </head>
     <body>
-        <nav class="nav_js" id="responsive_nav"><a href='/index.html'>Home</a>
-<a class="active" href='/profile.html'>Over mij</a>
-<a href='/dashboard.html'>Dashboard</a>
-<a href='/experiment.html'>Experimenten</a>
+        <nav class="nav_js" id="responsive_nav"><a href='/html/index.html'>Home</a>
+<a class="active" href='/html/profile.html'>Over mij</a>
+<a href='/html/dashboard.html'>Dashboard</a>
+<a href='/html/motivation.html'>Motivatie</a>
+<a href='/html/experiment.html'>Experimenten</a>
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
             <section>
