--- a/tasks/programming_basics/canvas.html
+++ b/tasks/programming_basics/canvas.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>JavaScript Canvas</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="canvas.css" />
-        <script src="canvas.js"></script>
+        <link rel="stylesheet" type="text/css" media="screen" href="css/canvas.css" />
+        <script src="js/canvas.js"></script>
     </head>
     <body>
         <canvas id="drawable_canvas" width="500px" height="500px"></canvas>
