+ opdrachting Programming Basics

--- a/tasks/programming_basics/index.html
+++ b/tasks/programming_basics/index.html
@@ -9,7 +9,20 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-        
+        <h1>Even of oneven?</h1>
+        <input id="number_to_check" type="number">
+        <button onclick="evaluate_number()">Even of oneven?</button>
+        <h1>On programming</h1>
+        <p id="very_cool">
+            Programming is not so cool!
+        </p>
+        <button onclick="is_cool()">Verander het statement</button>
+        <h1>Niet-compatibele variabelen</h1>
+        '1400' en 'Ik woon in Naboo' zijn niet van hetzelfde type. De een is een
+        getal, de andere een regel.
+
+        Toch vergelijken?
+        <button onclick="compare_incompatibles()">Klik dan hier!</button>
     </body>
 </html>
-<!-- TODO: Link dit gebeuren m.b.v. navigatiebalk -->
+<!-- TODO: Link dit gebeuren m.b.v. navigatiebalk. Zet om naar PHP -->
