> fix oneven-even-checker

--- a/tasks/programming_basics/index.html
+++ b/tasks/programming_basics/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>Even of oneven?</h1>
-        <input id="number_to_check" type="number">
+        <input id="number_to_check" type="text">
         <button onclick="evaluate_number()">Even of oneven?</button>
         <h1>On programming</h1>
         <p id="very_cool">
