> fx text niet in p-element

--- a/tasks/programming_basics/index.html
+++ b/tasks/programming_basics/index.html
@@ -18,10 +18,11 @@
         </p>
         <button onclick="is_cool()">Verander het statement</button>
         <h1>Niet-compatibele variabelen</h1>
-        '1400' en 'Ik woon in Naboo' zijn niet van hetzelfde type. De een is een
-        getal, de andere een regel.
-
-        Toch vergelijken?
+        <p>
+            '1400' en 'Ik woon in Naboo' zijn niet van hetzelfde type. De een is een
+            getal, de andere een regel.
+        </p>
+        <p>Toch vergelijken?</p>
         <button onclick="compare_incompatibles()">Klik dan hier!</button>
     </body>
 </html>
