> wijziging achtergrondkleur quoteblokken

--- a/html/motivation.html
+++ b/html/motivation.html
@@ -295,7 +295,7 @@
                 <h4>Volgens mijn ouders</h4>
                 <p>
                     Mijn ouders herkennen mij hierin, al zeggen ze wel dat ik her en der iets duidelijker
-                    mocht zijn.
+                    mocht zijn of iets te duidelijk was.
                 </p>
                 <h2>Bronnen</h2>
                 <ul>
