> beter bereikbaar maken van pagina's fase 1

--- a/html/experiment.html
+++ b/html/experiment.html
@@ -21,6 +21,7 @@
 <a href='/html/dashboard.html'>Dashboard</a>
 <a href='/html/motivation.html'>Motivatie</a>
 <a href='/html/job_image.html'>Beroepsbeeld</a>
+<a class="dropdown" href='/html/tasks/index.html'>Opdrachten</a>
 <a class="active" href='/html/experiment.html'>Experimenten</a>
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
