--- a/html/tasks/index.html
+++ b/html/tasks/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>
-    Beroepsbeeld</title>
+    Opdrachten</title>
 
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -19,13 +19,13 @@
 <a href='/html/profile.html'>Over mij</a>
 <a href='/html/dashboard.html'>Dashboard</a>
 <a href='/html/motivation.html'>Motivatie</a>
-<a class="active" href='/html/job_image.html'>Beroepsbeeld</a>
-<a class="dropdown" href='/html/tasks/index.html'>Opdrachten</a>
+<a href='/html/job_image.html'>Beroepsbeeld</a>
+<a class="active dropdown" href='/html/tasks/index.html'>Opdrachten</a>
 <a href='/html/experiment.html'>Experimenten</a>
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
             <section>
-                <h1>Beroepsbeeld</h1>
+                <h1>Opdrachten</h1>
                 <p>
                     SOON...^tm
                 </p>
