> toegankelijker maken pagina's f3

--- a/html/tasks/computer_science_basics/index.html
+++ b/html/tasks/computer_science_basics/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>
-    Programming Basics</title>
+    Computer Science Basics</title>
 
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
@@ -22,8 +22,8 @@
 <a href='/html/job_image.html'>Beroepsbeeld</a>
 <div class='dropdown'>
 <a class="dropdown" href='/html/tasks/index.html'>Opdrachten&nbsp;<i class='fa fa-caret-down'></i></a>
-<div class='dropdown_content'><a  class="active" href='/html/tasks/programming_basics/index.html'>Programming Basics</a>
-<a  href='/html/tasks/computer_science_basics/index.html'>Computer Science Basics</a>
+<div class='dropdown_content'><a  href='/html/tasks/programming_basics/index.html'>Programming Basics</a>
+<a  class="active" href='/html/tasks/computer_science_basics/index.html'>Computer Science Basics</a>
 </div>
 
 </div>
@@ -31,7 +31,7 @@
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
             <section>
-                <h1>Programming Basics</h1>
+                <h1>Computer Science Basics</h1>
                 <p>
                     SOON...^tm
                 </p>
