--- a/html/experiment.html
+++ b/html/experiment.html
@@ -21,7 +21,13 @@
 <a href='/html/dashboard.html'>Dashboard</a>
 <a href='/html/motivation.html'>Motivatie</a>
 <a href='/html/job_image.html'>Beroepsbeeld</a>
-<a class="dropdown" href='/html/tasks/index.html'>Opdrachten</a>
+<div class='dropdown'>
+<a class="dropdown" href='/html/tasks/index.html'>Opdrachten&nbsp;<i class='fa fa-caret-down'></i></a>
+<div class='dropdown_content'><a  href='/html/tasks/programming_basics/index.html'>Programming Basics</a>
+<a  href='/html/tasks/computer_science_basics/index.html'>Computer Science Basics</a>
+</div>
+
+</div>
 <a class="active" href='/html/experiment.html'>Experimenten</a>
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
