--- a/html/tasks/index.html
+++ b/html/tasks/index.html
@@ -20,15 +20,30 @@
 <a href='/html/dashboard.html'>Dashboard</a>
 <a href='/html/motivation.html'>Motivatie</a>
 <a href='/html/job_image.html'>Beroepsbeeld</a>
-<a class="active dropdown" href='/html/tasks/index.html'>Opdrachten</a>
+<div class='dropdown'>
+<a class="active" href='/html/tasks/index.html'>Opdrachten&nbsp;<i class='fa fa-caret-down'></i></a>
+<div class='dropdown_content'><a  href='/html/tasks/programming_basics/index.html'>Programming Basics</a>
+<a  href='/html/tasks/computer_science_basics/index.html'>Computer Science Basics</a>
+</div>
+
+</div>
 <a href='/html/experiment.html'>Experimenten</a>
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
             <section>
                 <h1>Opdrachten</h1>
                 <p>
-                    SOON...^tm
+                    Onder deze pagina worden allerlei opdrachten verzameld die
+                    zijn gemaakt in één van de mappen die deze website rijk is.
                 </p>
+                <p>
+                    Wél is het zo dat dit niet opdrachten betreft die zijn gemaakt
+                    voor de <i>studieloopbaanoriëntatie</i>. Deze staan in de navigatiebalk.
+                </p>
+                <h2><i>Programming Basics</i></h2>
+                <p>stuff</p>
+                <h2><i>Computer Science Basics</i></h2>
+                <p>stuff2</p>
                 <p class="small_right copy clear">
     ©2018</br>
     <a href="/sitemap.xml" title="Sitemap">sitemap</a>
