+ loops and such

--- a/html/tasks/programming_basics/test.html
+++ b/html/tasks/programming_basics/test.html
@@ -13,7 +13,8 @@
 <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="/css/responsive.css"/>
 
-<script src="/js/responsive.js"></script>    </head>
+<script src="/js/responsive.js"></script>        <script src="/tasks/programming_basics/js/main.js"></script>
+    </head>
     <body>
         <nav class="nav_js" id="responsive_nav"><a href='/html/index.html'>Home</a>
 <a href='/html/profile.html'>Over mij</a>
