--- a/html/tasks/programming_basics/test.html
+++ b/html/tasks/programming_basics/test.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="/css/responsive.css"/>
 
 <script src="/js/responsive.js"></script>        <script src="/tasks/programming_basics/js/main.js"></script>
+        <script src="/tasks/programming_basics/js/functions.js"></script>
     </head>
     <body>
         <nav class="nav_js" id="responsive_nav"><a href='/html/index.html'>Home</a>
