--- a/html/profile.html
+++ b/html/profile.html
@@ -27,6 +27,7 @@
 </div>
 
 </div>
+<a href='/html/blog/index.html'>Blog</a>
 <a href='/html/experiment.html'>Experimenten</a>
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
