--- a/html/tasks/programming_basics/test.html
+++ b/html/tasks/programming_basics/test.html
@@ -15,23 +15,24 @@
 
 <script src="/js/responsive.js"></script>        <script src="/tasks/programming_basics/js/main.js"></script>
         <script src="/tasks/programming_basics/js/functions.js"></script>
+        <script src="/tasks/programming_basics/js/arrays.js"></script>
     </head>
     <body>
-        <nav class="nav_js" id="responsive_nav"><a href='/html/index.html'>Home</a>
-<a href='/html/profile.html'>Over mij</a>
-<a href='/html/dashboard.html'>Dashboard</a>
-<a href='/html/motivation.html'>Motivatie</a>
-<a href='/html/job_image.html'>Beroepsbeeld</a>
-<div class='dropdown'>
-<a class="dropdown" href='/html/tasks/index.html'>Opdrachten&nbsp;<i class='fa fa-caret-down'></i></a>
-<div class='dropdown_content'><a  class="active" href='/html/tasks/programming_basics/index.html'>Programming Basics</a>
-<a  href='/html/tasks/computer_science_basics/index.html'>Computer Science Basics</a>
-<a href='/html/experiment.html'>Experimenten</a>
-</div>
-
-</div>
-<a href='/html/blog/index.html'>Blog</a>
-<a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
+                <nav class="nav_js" id="responsive_nav">
+            <a href='/html/index.html'>Home</a>
+            <a href='/html/profile.html'>Over mij</a>
+            <a href='/html/dashboard.html'>Dashboard</a>
+            <a href='/html/motivation.html'>Motivatie</a>
+            <a href='/html/job_image.html'>Beroepsbeeld</a>
+            <div class='dropdown'>
+                <a class="dropdown" href='/html/tasks/index.html'>Opdrachten&nbsp;<i class='fa fa-caret-down'></i></a>
+                <div class='dropdown_content'><a  class="active" href='/html/tasks/programming_basics/index.html'>Programming Basics</a>
+                    <a  href='/html/tasks/computer_science_basics/index.html'>Computer Science Basics</a>
+                    <a href='/html/experiment.html'>Experimenten</a>
+                </div>
+            </div>
+            <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a>
+        </nav>
         <main>
             <section>
                 <h1>Programming Basics</h1>
