> alles verplaatst naar eigen website; + 2018/10-02

--- a/index.html
+++ b/index.html
@@ -1,7 +1,2 @@
-<!-- Verwijst door naar /html/index.html -->
-<head>
-    <meta http-equiv="refresh" content="0; url=/html/index.html"/>
-</head>
-<body>
-    <p>REDIRECTING...</p>
-</body>
+<meta http-equiv="refresh" content="0; url=joverwijk.nl/index.php">
+<p>REDIRECTING...</p>
