--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=joverwijk.nl/index.php">
+<meta http-equiv="refresh" content="0; url=https://www.joverwijk.nl/index.php">
 <p>REDIRECTING...</p>
